Fix scrollbar when gallery is loading

--- a/client/src/app/modals/components/gallery/gallery.component.scss
+++ b/client/src/app/modals/components/gallery/gallery.component.scss
@@ -15,6 +15,7 @@
     display: flex;
     justify-content: center;
     align-content: center;
+    overflow: hidden;
 }
 
 .gallery-container {
